# docs/swagger.json
@@ -1,12 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Documentation for Challenge-Go API",
-        "title": "Swagger Challenge API",
-        "contact": {},
-        "version": "2.0"
+        "contact": {}
     },
-    "basePath": "/",
     "paths": {
         "/accounts": {
             "get": {
@@ -84,16 +80,16 @@
                 ]
             }
         },
-        "/deposite": {
+        "/deposit": {
             "post": {
-                "description": "Make a deposite from an authentic account",
+                "description": "Make a deposit from an authentic account",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Make a deposite",
+                "summary": "Make a deposit",
                 "parameters": [
                     {
                         "description": "Body",
@@ -101,7 +97,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/autenticationoperations.Deposite"
+                            "$ref": "#/definitions/account.DepositInput"
                         }
                     }
                 ]
@@ -154,7 +150,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/autenticationoperations.Withdraw"
+                            "$ref": "#/definitions/account.Withdraw"
                         }
                     }
                 ]
@@ -162,7 +158,7 @@
         }
     },
     "definitions": {
-        "autenticationoperations.Deposite": {
+        "account.DepositInput": {
             "type": "object",
             "properties": {
                 "amount": {
@@ -170,7 +166,7 @@
                 }
             }
         },
-        "autenticationoperations.Withdraw": {
+        "account.Withdraw": {
             "type": "object",
             "properties": {
                 "amount": {
@@ -198,13 +194,13 @@
                 "cpf": {
                     "type": "string"
                 },
-                "created_at": {
+                "createdAt": {
                     "type": "string"
                 },
                 "id": {
                     "type": "string"
                 },
-                "nome": {
+                "name": {
                     "type": "string"
                 },
                 "secret": {
@@ -218,7 +214,7 @@
                 "cpf": {
                     "type": "string"
                 },
-                "nome": {
+                "name": {
                     "type": "string"
                 },
                 "secret": {
@@ -232,7 +228,7 @@
                 "amount": {
                     "type": "number"
                 },
-                "cpf_destino": {
+                "destinationCPF": {
                     "type": "string"
                 }
             }
