# domain/entities/transfer.go
@@ -1,9 +1,9 @@
 package entities
 
 type Transfer struct {
-	ID                   string
-	AccountOriginID      string
-	AccountDestinationID string
-	Amount               float64
-	CreatedAt            string
+	ID               string
+	OriginAccountID  string
+	DestineAccountID string
+	Amount           float64
+	CreatedAt        string
 }
